manifests/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: azure-voting-app
  name: azure-voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azure-voting-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: azure-voting-app
    spec:
      containers:
      - image: s3cexampleacr.azurecr.io/azure-voting-app-rust@sha256:3e5a4ab6bb7202d5277aebf9fee48ce292b7b5e742a9819534af1a0624c2245d
        name: azure-voting-app-rust
        ports:
        - containerPort: 8080
        resources: {}
status: {}
