manifests/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: azure-voting-db
  name: azure-voting-db
  namespace: default
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: azure-voting-db
  type: ClusterIP
status:
  loadBalancer: {}
