manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: azure-voting-app
  namespace: default
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - http:
      paths:
      - backend:
          service:
            name: azure-voting-app
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
